Fix  the issue that about us ist hidden by header

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,6 +154,7 @@ i {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    scroll-margin-top: 4em;
 }
 
 hr {
